--- a/.github/workflows/ios-tests.yml
+++ b/.github/workflows/ios-tests.yml
@@ -12,8 +12,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Select Xcode 16
-        run: sudo xcode-select -s /Applications/Xcode_16.app || sudo xcode-select -s /Applications/Xcode.app
+      - name: Select Xcode 16 (26.x)
+        run: |
+          sudo xcode-select -s /Applications/Xcode_16.0.app \
+            || sudo xcode-select -s /Applications/Xcode_16.1.app \
+            || sudo xcode-select -s /Applications/Xcode.app
 
       - name: Resolve Swift packages
         run: |
@@ -27,7 +30,7 @@ jobs:
             -project BetterUntis.xcodeproj \
             -scheme BetterUntis \
             -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 15,OS=18.0' \
+            -destination 'platform=iOS Simulator,name=iPhone 17' \
             clean test | tee xcodebuild.log
         env:
           NSUnbufferedIO: "YES"
